Build the arrow link component.

--- a/index.html
+++ b/index.html
@@ -14,22 +14,5 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <title>Document</title>
   </head>
-  <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum neque
-      est, accusantium nulla vel iste laboriosam iure necessitatibus a obcaecati
-      illo quidem quo quia nesciunt nobis laborum eius tempore facere. Voluptate
-      sit consequuntur, magni, alias velit fugit assumenda nulla fugiat odio
-      natus possimus? Fugiat ut voluptatem aliquid eius culpa, quis quidem quod
-      officiis facere nesciunt architecto ducimus blanditiis esse possimus
-      reprehenderit libero porro. Perspiciatis sapiente cumque praesentium autem
-      fugit. Officia voluptatibus eligendi nobis aut temporibus, neque iusto
-      vel, voluptate iste sapiente minima nostrum, laudantium vitae provident.
-      Nostrum, dolore, earum itaque quae magni perspiciatis repellendus eligendi
-      nesciunt suscipit tempore non delectus!.
-    </p>
-  </body>
+  <body></body>
 </html>
